umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_chemdraw_Ni.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 53
bond_count: 66
sum_formula: C36N12Ni5
graph6: tpDH?C@CGO?@?@@?_G??@?GC?C???G?CD??????G???o??@???C????_??@G???A????C????G???AG????O????@?????G????G_????C?????@??????_????AG?????A??????C??????G?????@G?????G???????@???????G?????C?_??????C???????@???????C_?????@?????????@??????@?C
