umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_chemdraw_PTVT-T.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 49
bond_count: 51
sum_formula: C42O4S3
graph6: phcOGC@@GAO??A?G??G?C??C??G??G??c??A??O??@???@????@???@????O???O????C????G????G????C????O?????G?????_????@?????@??????_???C???????@??????C??????G??????G?????@???????@???????G???????_??????@???????@
