umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_corina_3K5C-BACE_8.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 78
bond_count: 80
sum_formula: C28H42ClN4O3+1
graph6: ~?@MhCGGC@?G?_@?@??_?G?@??C?AG??S?@???@O??????_??A???@????_???G???@????C????G????G???@C????G?????G????@A?????_?????O?????C?????@??????C??????G??????O??????G??????C???????O??????A???????C???????G???????C???????A????????O???????A????????C????????A?????????_?????????O????????A?????????G?????????_?????????_?????????O?????????G??????????_?????????@??????????A??????????A??????????@???????????O??????????C???????????_??????????@???????????A???????????A????????????_???????????G???????????@??????????A?????????
