umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_drugbank_acarbose.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 49
bond_count: 51
sum_formula: C25H5NO18
graph6: phCIGCCA?_?@O?_???G?@??C??G?AG??C??G???G???_??@???@????_??AG???@????C???A?????G????C????@?????O?????_????@?????C?????_??????G?????A??????C???A??????G??????O?????O??????G??????????O????A?????????_??
