umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_gaussview_MOM_Ciclica_conf_05.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 47
bond_count: 50
sum_formula: C17H23O7
graph6: "nH`@?_OcE?G??@?@??G?AG?C??O?A???K??@?@?????_??@???A???A????G???@????G????c?????????C????A?????O????A?????C?????G?????D?????A??????G??????O??O??????G??????????C??????A???????_??A?????"
