umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_016_26-large.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 32
sum_formula: C17H11IN2
graph6: ^?COK_G?O@KO@??G?A??OO?@??@????_???@???G?O?_??G???G???C???@?C???A????????G????g
