umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_13rsites.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 29
sum_formula: C6O6
graph6: XsP@?_IA?C?C?A@??G??_?@?D??GO?_???S??B??C??G???_???
