umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_1586.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 27
sum_formula: C23NO+1
graph6: XhEG?C@?G?_P????_?G?@??C?AG????CC??@_??G???_O?P????
