umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_1910.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 21
bond_count: 23
sum_formula: C19NO
graph6: ToU@?c?@@?G??KA??O?@??G??G??G??AC??c
